tests/baselines/reference/asyncFunctionDeclaration12_es2017.errors.txt
tests/cases/conformance/async/es2017/functionDeclarations/asyncFunctionDeclaration12_es2017.ts(1,24): error TS1003: Identifier expected.


==== tests/cases/conformance/async/es2017/functionDeclarations/asyncFunctionDeclaration12_es2017.ts (1 errors) ====
    var v = async function await(): Promise<void> { }
                           ~~~~~
!!! error TS1003: Identifier expected.